UI Tweaks, added registration 3

--- a/app/src/main/res/drawable/btn_link_disabled.xml
+++ b/app/src/main/res/drawable/btn_link_disabled.xml
@@ -2,10 +2,10 @@
 
 <shape   xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid
-        android:color="@color/colorPrimaryDisabled"/>
-    <padding android:left="@dimen/padding_left"
-        android:top="@dimen/padding_top"
-        android:right="@dimen/padding_right"
-        android:bottom="@dimen/padding_bottom" />
+        android:color="@color/transparent"/>
+    <padding android:left="@dimen/padding_left_link"
+        android:top="@dimen/padding_top_link"
+        android:right="@dimen/padding_right_link"
+        android:bottom="@dimen/padding_bottom_link" />
     <corners android:radius="@dimen/ui_radius" />
 </shape>
