--- a/app/src/main/res/drawable/btn_link_focused.xml
+++ b/app/src/main/res/drawable/btn_link_focused.xml
@@ -3,13 +3,10 @@
 
 <shape   xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid
-        android:color="@color/colorPrimary"/>
-    <padding android:left="@dimen/padding_left"
-        android:top="@dimen/padding_top"
-        android:right="@dimen/padding_right"
-        android:bottom="@dimen/padding_bottom" />
-    <stroke
-        android:width="1dip"
-        android:color="@color/white" />
+        android:color="@color/transparent"/>
+    <padding android:left="@dimen/padding_left_link"
+        android:top="@dimen/padding_top_link"
+        android:right="@dimen/padding_right_link"
+        android:bottom="@dimen/padding_bottom_link" />
     <corners android:radius="@dimen/ui_radius" />
 </shape>
