--- a/app/src/main/res/drawable/ic_foursquare_check_in.xml
+++ b/app/src/main/res/drawable/ic_foursquare_check_in.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="515.556"
     android:viewportHeight="515.556">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/colorPrimary"
       android:pathData="m0,274.226 l176.549,176.886 339.007,-338.672 -48.67,-47.997 -290.337,290 -128.553,-128.552z"/>
 </vector>
