--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -9,7 +9,7 @@
         android:id="@+id/horizontalScrollView3"
         android:layout_width="0dp"
         android:layout_height="@dimen/courses_height"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:fillViewport="true"
         android:scrollbars=""
         app:layout_constraintEnd_toEndOf="@+id/home_firstname"
@@ -209,5 +209,14 @@
             app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/button3"
+        style="@style/BtnLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_all"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView3"
+        app:layout_constraintEnd_toEndOf="@+id/home_firstname" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
